Eden fetch from url and table url complited

--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
 </head>
 <body>
-    <script src="assets/js/app.js"></script>
-    <h1><center>This is project two</center></h1>
-    <h2><center>API Featching</center></h2>
+ <table class="table table-hover table-striped table-info mx-auto">
+     <thead class="thead-dark">
+         <tr>
+             <th>#</th>
+             <th>Name</th>
+             <th>Capital</th>
+             <th>population</th>
+             <th>Borders</th>
+             <th>flag</th>
+         </tr>
+     </thead>
+     <tbody id="result">
+
+     </tbody>
+ </table>
+ <script src="assets/js/app.js"></script>
 </body>
 </html>
