some ui changed

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
  <table class="table table-hover table-striped table-info mx-auto">
      <thead class="thead-dark">
          <tr>
-             <th>#</th>
-             <th>Name</th>
-             <th>Capital</th>
-             <th>population</th>
+             <th>No</th>
+             <th>Country Name</th>
+             <th>Capital City</th>
+             <th>Population</th>
              <th>Borders</th>
-             <th>flag</th>
+             <th>Flag</th>
          </tr>
      </thead>
      <tbody id="result">
