search functionality is done so it search by county name

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <link rel="shortcut icon" type="image/jpg" href="./assets/css/1.jpg"/>
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <div class="search-container">
+         
+            <input type="text"  id="inputt" placeholder="Search.." name="search">
+            <button id="search">Search</button>
+          
+        </div>
+      </div>
     <div id="tabb">
         <table class="table table-hover table-striped table-info mx-auto">
             <thead class="thead-dark">
