box shadow sucess

--- a/index.html
+++ b/index.html
@@ -5,27 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" href="1.jpg" type="image/x-icon">
+    <link rel="shortcut icon" type="image/jpg" href="./assets/css/1.jpg"/>
 </head>
 <body>
- <table class="table table-hover table-striped table-info mx-auto">
-     <thead class="thead-dark">
-         <tr>
-             <th>No</th>
-             <th>Country Name</th>
-             <th>Capital City</th>
-             <th>Population</th>
-             <th>Borders</th>
-             <th>Flag</th>
-         </tr>
-     </thead>
-     <tbody id="result">
-
-     </tbody>
- </table>
- <script src="assets/js/app.js"></script>
-</body>
+    <div id="tabb">
+        <table class="table table-hover table-striped table-info mx-auto">
+            <thead class="thead-dark">
+                <tr id="he">
+                    <th>No</th>
+                    <th>Country Name</th>
+                    <th>Capital City</th>
+                    <th>Population</th>
+                    <th>Borders</th>
+                    <th>Flag</th>
+                </tr>
+            </thead>
+            <tbody id="result">
+       
+            </tbody>
+        </table>
+       </div>
+        <script src="assets/js/app.js"></script>
+       </body>
 </html>
