--- a/contact.html
+++ b/contact.html
@@ -162,12 +162,12 @@
         <div class="col-md-4 col-sm-4 col-xs-12">
           <div class="widget clearfix">
             <div class="widget-title">
-              <h3>Information Link</h3>
+              <h3 style="color: white;">Information Link</h3>
             </div>
             <ul class="footer-links">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="contact.html">about</li>
-              <li><a href="about.html">contact</a></li>
+              <li><a href="index.html" style="color: white;">Home</a></li>
+              <li><a href="contact.html" style="color: white;">about</li>
+              <li><a href="about.html" style="color: white;">contact</a></li>
             </ul>
           </div>
         </div>
@@ -175,14 +175,14 @@
         <div class="col-md-4 col-sm-4 col-xs-12">
           <div class="widget clearfix">
             <div class="widget-title">
-              <h3> &nbsp; &nbsp; Contact Details</h3>
+              <h3 style="color: white;"> &nbsp; &nbsp; Contact Details</h3>
             </div>
     
             <ul class="footer-links">
-              <li><a href="mailto:#">se.mekides.getahun@gmil.com</a></li>
-              <li><a href="#">se.elda.girma@gmil.com</a></li>
-              <li><a href="#">se.eden.Tekee@gmil.com</a></li>
-              <li>PO Box 16122 mexico Street Addis Ababa, Ethiopia</li>
+              <li><a href="mailto:#" style="color: white;">se.mekides.getahun@gmail.com</a></li>
+              <li><a href="#" style="color: white;">se.elda.girma@gmail.com</a></li>
+              <li><a href="#" style="color: white;">se.eden.Tekee@gmail.com</a></li>
+                <li><pstyle="color: white;"> PO Box 16122 mexico Street Addis Ababa, Ethiopia</p></li>
               <li>+251 113 8376 84</li>
             </ul>
           </div>
@@ -191,13 +191,13 @@
         <div class="col-md-4 col-sm-3 col-xs-12">
           <div class="widget clearfix">
             <div class="widget-title">
-              <h3>Social</h3>
+              <h3 style="color: white;">Social</h3>
             </div>
             <ul class="footer-links noBullet">
-              <li><a href="#"><i class="fab fa-facebook"></i> 22.543 Likes</a></li>
-              <li><a href="#"><i class="fab fa-telegram"></i> &nbsp; &nbsp;128 Projects</a></li>
-              <li><a href="#"><i class="fab fa-instagram"></i>&nbsp; &nbsp;12.860 followers</a></li>
-              <li><a href="#"><i class="fab fa-twitter"></i> &nbsp; &nbsp;3331 Pins</a></li>
+              <li><a href="#" style="color: white;"><i class="fab fa-facebook"></i> 22.543 Likes</a></li>
+              <li><a href="#" style="color: white;"><i class="fab fa-telegram"></i> &nbsp; &nbsp;128 Projects</a></li>
+              <li><a href="#" style="color: white;"><i class="fab fa-instagram"></i>&nbsp; &nbsp;12.860 followers</a></li>
+              <li><a href="#" style="color: white;"><i class="fab fa-twitter"></i> &nbsp; &nbsp;3331 Pins</a></li>
             </ul>
           </div>
         </div>
